# monkey-troop

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  GEMINI.md  LICENSE  MVP_STATUS.md  PHASE2_CHECKLIST.md  PHASE2_PROGRESS.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  TESTING_GUIDE.md  dev.sh  docker-compose.coordinator.yml  docker-compose.worker.yml  fix_main_merge.patch  fix_transactions.patch  install-coordinator.sh  start.sh  test_benchmark.py  test_plan.md
.github/: dependabot.yml
client/: Cargo.toml
client/src/: config.rs  e2e_crypto.rs  main.rs  proxy.rs
client/tests/: integration_test.rs
config/: Caddyfile.path.template  Caddyfile.subdomain.template  headscale.yaml.template
coordinator/: .coverage  .coveragerc  __init__.py  alembic.ini  audit.py  auth.py  benchmark.py  benchmark_reputation.py  benchmark_utils.py  crypto.py  database.py  dependencies.py  main.py  middleware.py  pyproject.toml  pytest.ini  rate_limit.py  requirements.txt  streaming.py  timeout_middleware.py  transactions.py
coordinator/application/: accounting_ports.py  accounting_services.py  inference_ports.py  inference_services.py  orchestration_services.py  security_ports.py  security_services.py  verification_ports.py  verification_services.py
coordinator/docs/api/: coordinator.html  index.html  search.js
coordinator/docs/api/coordinator/: database.html  dependencies.html  domain.html  main.html  rate_limit.html  tests.html
coordinator/docs/api/coordinator/domain/: accounting.html  inference.html  security.html  verification.html
coordinator/docs/api/coordinator/domain/accounting/: models.html
coordinator/docs/api/coordinator/domain/inference/: models.html  streaming.html
coordinator/docs/api/coordinator/domain/security/: models.html
coordinator/docs/api/coordinator/domain/verification/: models.html
coordinator/docs/api/coordinator/tests/: __pycache__.html  conftest.html  test_integration.html  test_performance.html  test_rate_limit.html  unit.html
coordinator/docs/api/coordinator/tests/unit/: application.html  domain.html  test_database_utils.html  test_dependencies.html  test_main_entry.html  test_main_module.html  test_ports_coverage.html
coordinator/docs/api/coordinator/tests/unit/application/: test_accounting_services.html  test_inference_services.html  test_security_services.html  test_verification_services.html
coordinator/docs/api/coordinator/tests/unit/domain/: accounting.html  inference.html  security.html  verification.html
coordinator/docs/api/coordinator/tests/unit/domain/accounting/: test_models.html
coordinator/docs/api/coordinator/tests/unit/domain/inference/: test_models.html  test_streaming.html
coordinator/docs/api/coordinator/tests/unit/domain/security/: test_models.html
coordinator/docs/api/coordinator/tests/unit/domain/verification/: test_models.html
coordinator/domain/accounting/: models.py
coordinator/domain/inference/: models.py  reputation.py  streaming.py
coordinator/domain/security/: models.py
coordinator/domain/verification/: models.py
coordinator/infrastructure/: dependencies.py
coordinator/infrastructure/audit/: logger.py
coordinator/infrastructure/persistence/: database.py  inference_repositories.py  repositories.py  reputation_repository.py  verification_repositories.py
coordinator/infrastructure/security/: key_repository.py  rate_limit.py  token_service.py
coordinator/interface/api/: accounting.py  inference.py  schemas.py  security.py  verification.py
coordinator/keys/: jwt_private_key.pem  jwt_public_key.pem
coordinator/migrations/: README.md  env.py
coordinator/migrations/versions/: 001_initial_schema.py  002_audit_log_table.py  003_node_owner_id_fk.py  004_node_reputation.py
coordinator/tests/: .gitignore  README.md  bench_n_plus_one_optimized.py  benchmark_migration.py  benchmark_migration_sqlite.py  conftest.py  test_audit.py  test_cors.py  test_cors_security.py  test_integration.py  test_multiplier.py  test_performance.py  test_rate_limit.py  test_streaming.py  test_transactions.py
coordinator/tests/benchmark/: test_redis_perf.py
coordinator/tests/integration/: test_main.py  test_rate_limit_integration.py
coordinator/tests/integration/interface/api/: test_accounting.py  test_inference.py  test_security.py  test_verification.py
coordinator/tests/performance/: test_list_peers_perf.py
coordinator/tests/unit/: test_database_utils.py  test_dependencies.py  test_main_entry.py  test_main_module.py  test_ports_coverage.py
coordinator/tests/unit/application/: test_accounting_services.py  test_inference_services.py  test_orchestration_services.py  test_security_ports.py  test_security_services.py  test_verification_services.py
coordinator/tests/unit/domain/accounting/: test_models.py
coordinator/tests/unit/domain/inference/: test_models.py  test_reputation.py  test_streaming.py
coordinator/tests/unit/domain/security/: test_models.py
coordinator/tests/unit/domain/verification/: test_models.py
coordinator/tests/unit/infrastructure/audit/: test_logger.py
coordinator/tests/unit/infrastructure/persistence/: test_database.py  test_inference_repositories.py  test_repositories.py  test_reputation_repository.py  test_verification_repositories.py
coordinator/tests/unit/infrastructure/security/: test_key_repository.py  test_token_service.py
shared/: Cargo.toml
shared/src/: circuit_breaker.rs  crypto.rs  errors.rs  lib.rs  models.rs  retry.rs  system.rs
worker/: Cargo.toml  benchmark.py
worker/src/: benchmark.rs  config.rs  gpu.rs  heartbeat.rs  main.rs  proxy.rs
worker/src/application/: ports.rs  services.rs
worker/src/domain/: inference.rs  mod.rs  models.rs
worker/src/engines/: lmstudio.rs  mod.rs  ollama.rs  vllm.rs
worker/src/infrastructure/: config.rs  mod.rs
worker/src/infrastructure/engines/: ollama.rs
worker/src/infrastructure/system/: auth.rs  benchmark.rs  coordinator.rs  e2e_crypto.rs  gpu.rs  mod.rs
worker/src/presentation/api/: proxy.rs
worker/tests/: integration_test.rs
worker/tests/unit/: test_benchmark.py
(+34 files in other folders)
