[workspace]
members = ["worker", "client", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Monkey Troop Contributors"]
repository = "https://github.com/monkeytroop/monkey-troop"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream", "blocking"] }
url = { version = "2.5", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.15"

# Streaming support
futures = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }

# Crypto (E2E encryption)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.11"
base64 = "0.22"
rand = "0.8"
