[package]
name = "monkey-troop-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }

# Worker-specific dependencies
sysinfo = "0.38"  # For system monitoring
hostname = "0.4"  # For getting hostname

# Shared types
monkey-troop-shared = { path = "../shared" }

[dev-dependencies]
httpmock = "0.8.3"
serial_test = "3.2.0"
